--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Happy Birthday Phuong Uyen</title>
         <link rel="stylesheet" href="twenten.css">
     </head>
     <body>
@@ -39,4 +40,5 @@
             </tr>
         </table>
     </body>
+
 </html>
