--- a/wishes1.html
+++ b/wishes1.html
@@ -3,8 +3,8 @@
     <head>
         <link rel="stylesheet" href="twenten.css">
     </head>
-    <body style="background-image: url(wishes_background/wish3.jpg); background-size: contain; align-items: flex-start; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-        <a href="index.html" style="margin: 7px;"><div class="box"></div><h1 class="context evensmaller" style="font-family:Georgia, 'Times New Roman', Times, serif;">Back</h1></a>
+    <body style="background-image: url(wishes_background/wish3.jpg); background-size: contain; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+        <a href="index.html" style="margin: 7px;" id="box1"><div class="box"></div><h1 class="context evensmaller" style="font-family:Georgia, 'Times New Roman', Times, serif;">Back</h1></a>
         <br>
         <table>
             <tr>
